<resources>
    <string name="app_name">Criminal-Intentt</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="call_police_crime">Call police!</string>
    <string name="select_date_btn">Select date</string>
    <string name="select_time_btn">Select time</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_all_crimes">Delete all crimes</string>
    <string name="the_list_is_currently_empty">The list is currently empty</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="choose_phone">choose phone</string>
    <string name="crime_number_text">Call number</string>
    <string name="crime_photo_description">crime_photo</string>
    <string name="camera_button_description">camera button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_photo_view_description">crime_photo_view</string>
    <string name="crime_image_view_dialog_description">crime_image_view_dialog</string>
</resources>